k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dev-backend-deployment
  namespace: devboard
  labels:
    app: devboard-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devboard-backend
  template:
    metadata:
      labels: 
        app: devboard-backend
    spec:
      containers:
      - name: devboard-backend-container
        image: kushagr488/dev-backend:latest
        ports:
        - containerPort: 8080
