k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dev-frontend-deployment
  namespace: TaskPilot
  labels:
    app: TaskPilot-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: TaskPilot-frontend
  template:
    metadata:
      labels: 
        app: TaskPilot-frontend
    spec:
      containers:
      - name: TaskPilot-frontend-container
        image: kushagr488/dev-frontend:latest
        ports:
        - containerPort: 5000
