k8s/postgres-stateful.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: postgres-statefulset
  namespace: devboard
  labels:
    app: postgres-app
spec:
  serviceName: postgres 
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres-cont
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          readinessProbe:
            exec: 
              command: ["sh","-c","pg_isready -U $(POSTGRES_USER) -d $(POSTGRES_DB)"]
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: init
          configMap:
            name: postgres-init
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: devboard
      spec:
        storageClassName: local-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
