k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: taskpilot
spec:
  selector:
    app: taskpilot-frontend
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 5000
    nodePort: 30010
  type: NodePort
# Frontend is acccessble from node port
