k8s/postgres-service.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: TaskPilot
spec:
  clusterIP: None
  selector:
    app: postgres-app
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
